--- a/PortalForm/src/app/app.component.html
+++ b/PortalForm/src/app/app.component.html
@@ -1,3 +1,73 @@
-<input type="text" class="form-control" required [(ngModel)]="data.name">
-<input type="text" class="form-control" required [(ngModel)]="data.age"> 
-  <button  (click)="onSubmit()">Submit</button>
+<md-card>
+  <md-card-header>
+    <md-card-title>User Registration</md-card-title>
+    <md-card-subtitle>Please fill in all details</md-card-subtitle>
+  </md-card-header>
+  <md-card-content>
+    <form class="example-form" name="userForm">
+      <div class="row">
+        <div class="col-lg-6">
+          <md-input-container class="example-full-width">
+            <input mdInput placeholder="First name" [(ngModel)]="user.fName" name="fName">
+          </md-input-container>
+        </div>
+        <div class="col-lg-6">
+          <md-input-container class="example-full-width">
+            <input mdInput placeholder="Last Name" [(ngModel)]="user.lName" name="lName">
+          </md-input-container>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <md-select placeholder="Technology" [(ngModel)]="user.technology" name="technology">
+            <md-option *ngFor="let technology of technologies" [value]="technology.value">
+              {{technology.viewValue}}
+            </md-option>
+          </md-select>
+        </div>
+        <div class="col-lg-6">
+          <md-select placeholder="Location" [(ngModel)]="user.location" name="location">
+            <md-option *ngFor="let location of locations" [value]="location.value">
+              {{location.viewValue}}
+            </md-option>
+          </md-select>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 text-right">
+          <button (click)="addNewUser()" md-raised-button>Submit</button>
+        </div>
+      </div>
+    </form>
+  </md-card-content>
+</md-card>
+
+
+<md-card class="example-card">
+  <md-card-header>
+    <md-card-title>Search User</md-card-title>
+  </md-card-header>
+  <md-card-content>
+    <div class="search-container">
+      <md-input-container class="example-full-width">
+        <input mdInput placeholder="Search user by first name" #searchTxt (keyup)="findUser(searchTxt.value)">
+      </md-input-container>
+    </div>
+    <table class="table table-bordered table-striped table-hover">
+      <thead>
+        <tr>
+          <td>First Name</td>
+          <td>Last Name</td>
+          <td>Technology</td>
+          <td>Location</td>
+        </tr>
+      </thead>
+      <tr *ngFor="let user of users">
+        <td>{{user.fName}}</td>
+        <td>{{user.lName}}</td>
+        <td>{{user.technology}}</td>
+        <td>{{user.location}}</td>
+      </tr>
+    </table>
+  </md-card-content>
+</md-card>
